cluster/staging-vcluster/vcluster2/vcluster-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vcluster2
  namespace: istio-ingress
spec:
  hosts:
    - 'vcluster2.${DOMAIN_2}'
  gateways:
    - istio-ingress/passthru-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - 'vcluster2.${DOMAIN_2}'
      route:
        - destination:
            port:
              number: 443
            host: vcluster2.staging-vcluster.svc.cluster.local
          weight: 100
